force-app/main/default/objects/Project_Analytics__c/Project_Analytics__c.object-meta.xml
<CustomObject>
    <description>Object used to store important data analytics and KPI&apos;s for Projects</description>
    <label>Project Analytics</label>
    <nameField>
        <label>Project Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>