force-app/main/default/objects/Project_Analytics__c/fields/Control_Requirements_With_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Control_Requirements_With_Evidence__c</fullName>
    <label>Control Requirements With Evidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>