force-app/main/default/objects/Project_Analytics__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Field to relate this to it&apos;s parent Project Record</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Analytics</relationshipLabel>
    <relationshipName>Project_Analytics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>