force-app/main/default/objects/Project_Analytics__c/fields/Total_Clauses__c.field-meta.xml
<CustomField>
    <fullName>Total_Clauses__c</fullName>
    <label>Total Clauses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>