force-app/main/default/objects/Project_Analytics__c/fields/Total_Control_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Total_Control_Requirements__c</fullName>
    <label>Total Control Requirements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>