force-app/main/default/objects/Project_Analytics__c/fields/Total_Controls__c.field-meta.xml
<CustomField>
    <fullName>Total_Controls__c</fullName>
    <label>Total Controls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>