force-app/main/default/objects/Project_Analytics__c/fields/Total_Evidence_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Evidence_Collected__c</fullName>
    <description>Percentage of total evidence collected against requirements</description>
    <label>Total Evidence Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>